--- a/Assets/UI/NewUSSFile.uss
+++ b/Assets/UI/NewUSSFile.uss
@@ -40,3 +40,11 @@ VisualElement {
     background-image: url("project://database/Assets/Gentleland/SteampunkUI/Art/Steampunk_UI_Dialogue_3.png?fileID=5185045578303202313&guid=44a8b76b70d48db4aa2dcac3eb64eb88&type=3#Steampunk_UI_Dialogue_3_3");
     -unity-background-image-tint-color: rgb(221, 197, 197);
 }
+
+.invisible {
+    opacity: 0;
+}
+
+.visible {
+    display: flex;
+}
